[project]
name = "nba-api-project"
version = "0.1.0"
description = "A Python package for collecting and analyzing NBA shot selection data across seasons."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "nba-api>=1.11.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"